package com.morris.pattern.bridge;

public abstract class ImageImp {
    protected  abstract void doPaint(Martix m);
}
